removed tag approach, Jenkins issues

--- a/impl/build.gradle
+++ b/impl/build.gradle
@@ -22,7 +22,7 @@ pact {
     publish {
         providerVersion = project.version
         pactBrokerUrl = 'http://localhost'
-        tags = [getGitBranch()]
+        tags = ['master']
     }
 }
 
